# moos-ivp-bastanfi

./: README.md
missions/: .gitignore
missions/lab_07/alpha/: alpha.bhv  alpha.moos
missions/lab_07/bravo_loiter/: bravo.bhv  bravo.moos
missions/lab_07/bravo_loiter_dbl/: bravo.bhv  bravo.moos
missions/lab_07/bravo_loiter_surface/: bravo.bhv
missions/lab_07/bravo_loiter_uuv/: bravo.moos
missions/lab_07/bravo_uuv_surface/: bravo.bhv  bravo.moos  bravo.moos++
missions/lab_08/alpha_bravo_pshare/: alpha.moos  alpha.moos++  bravo.bhv  bravo.moos  bravo.moos++  launch.sh  shoreside.moos  shoreside.moos++
missions/lab_08/alpha_pshare/: alpha.moos  alpha_shoreside.moos  alpha_vehicle.moos
missions/lab_08/henry_gilda_refuel/: targ_gilda.bhv  (+2 more)
missions/xrelay/: xrelay.moos
src/: .gitignore  CMakeLists.txt
src/pCommunicationAngle_bastanfi/: CMakeLists.txt  CommunicationAngle_bastanfi.cpp  CommunicationAngle_bastanfi.h  CommunicationAngle_bastanfi_Info.cpp  CommunicationAngle_bastanfi_Info.h  main.cpp  pCommunicationAngle_bastanfi.moos
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  Positions.cpp  Positions.h  main.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp  pOdometry.moos
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
src/pPrimeFactor/: CMakeLists.txt  PrimeEntry.cpp  PrimeEntry.h  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  main.cpp  pPrimeFactor.moos
(+50 files in other folders)
